[gd_scene load_steps=3 format=3 uid="uid://dd8tq5378pqb1"]

[ext_resource type="Script" uid="uid://ct7w1r5k4orfn" path="res://menus/start_screen.gd" id="1_cdxmd"]
[ext_resource type="Texture2D" uid="uid://d24ci1skwk6n2" path="res://assets/IMG_0537.PNG" id="2_lumme"]

[node name="StartScreen" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_cdxmd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 146.0
offset_top = 666.0
offset_right = 914.0
offset_bottom = 1155.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="New Game" type="TextureButton" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_lumme")

[node name="Continue" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Continue"

[node name="Settings" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="VBoxContainer"]
position = Vector2(390, 300)
zoom = Vector2(2, 2)

[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/GridContainer/Quit" to="." method="_on_quit_pressed"]
